# simd_and_parallel

./: Cargo.toml
benches/: bench.rs
emit_asm/src/: simd_vector.rs  vector.rs
src/: lib.rs  types.rs
