[package]
name = "simd_and_parallel"
version = "0.1.0"
authors = ["Fraser Balch <farseer.ulwithy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3.1"
oorandom = "11.1.0"
itertools = "0.9.0"

[[bench]]
name = "bench"
harness = false